--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,10 @@ services:
       - .:/app/
     networks:
       - tier
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 networks:
   tier:
