--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
     "nesbot/carbon": "^2.45",
     "carbon-cli/carbon-cli": "^1.2",
     "promphp/prometheus_client_php": "^2.2",
-    "mpdf/mpdf": "8.0.10"
+    "mpdf/mpdf": "8.0.10",
+    "google/cloud-text-to-speech": "^1.2",
+    "doctrine/orm": "^2.8"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5",
