--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,39 @@
 version: '3'
 
 services:
+
+  repeat-nginx:
+    build:
+      context: .
+      dockerfile: docker/nginx/Dockerfile
+    container_name: 'telegram-bots-metrics'
+    restart: always
+    ports:
+      - "8980:80"
+    volumes:
+      - .:/app/
+    networks:
+      - tier
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  repeat:
+    build:
+      context: .
+      dockerfile: docker/php/Dockerfile
+    container_name: 'telegram-bots-metricsphp'
+    restart: always
+    volumes:
+      - .:/app/
+    networks:
+      - tier
+    logging:
+      options:
+        max-size: "10m"
+        max-file: "3"
+
   worker:
     build:
       context: .
