--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,6 @@
     "vlucas/phpdotenv": "^5.3",
     "monolog/monolog": "^2.2",
     "predis/predis": "^1.1",
-    "faapz/pdo": "^2.1",
     "longman/telegram-bot": "^0.70.1",
     "adbario/php-dot-notation": "^2.2",
     "nesbot/carbon": "^2.45",
@@ -25,8 +24,9 @@
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5",
-    "vimeo/psalm": "^4.5",
-    "phpunit/phpunit": "^9.5"
+    "vimeo/psalm": "4.6.1",
+    "phpunit/phpunit": "^9.5",
+    "omentes/doctrine-psalm-plugin": "0.6.3"
   },
   "autoload": {
     "psr-4": {
