--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.5",
     "vimeo/psalm": "4.6.1",
-    "phpunit/phpunit": "^9.5",
-    "omentes/doctrine-psalm-plugin": "0.6.3"
+    "phpunit/phpunit": "^9.5"
   },
   "autoload": {
     "psr-4": {
