--- a/.env.github.actions
+++ b/.env.github.actions
@@ -1,4 +1,4 @@
-SERVICE_ROLE=test
+SERVICE_ROLE=prod
 TG_API=XXXXX
 TG_ADMIN_ID=123
 TG_NAME=Bot
@@ -8,7 +8,8 @@ DB_PORT=3306
 DB_CHARSET=utf8
 DB_USERNAME=root
 DB_PASSWORD=password
-LOG_PATH=./logs/
+LOG_PATH=./logs/app
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
+GOOGLE_APPLICATION_CREDENTIALS='/app/google.json'
