--- a/.env.dist
+++ b/.env.dist
@@ -8,7 +8,9 @@ DB_PORT=3306
 DB_CHARSET=utf8
 DB_USERNAME=root
 DB_PASSWORD=password
-LOG_PATH=./logs/app
+DB_DEV_MODE='1'
+DB_ENTITY_PATH='/app/app/Core/ORM/Entities/'
+LOG_PATH=./logs/
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
