--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,8 +29,8 @@ jobs:
         run: composer install --dev --no-interaction --no-ansi --prefer-dist --no-suggest --ignore-platform-reqs
       - name: PSR12 check
         run: php vendor/bin/phpcbf --standard=psr12 app -n tests -n
-#      - name: Psalm check
-#        run: php vendor/bin/psalm
+      - name: Psalm check
+        run: php vendor/bin/psalm
       - name: Create env file
         run: |
           cp .env.github.actions .env
