--- a/.env.github.actions
+++ b/.env.github.actions
@@ -4,12 +4,12 @@ TG_ADMIN_ID=123
 TG_NAME=Bot
 DB_HOST=mysql
 DB_NAME=test_db
-DB_PORT=3306
+DB_PORT=13306
 DB_CHARSET=utf8
 DB_USERNAME=root
 DB_PASSWORD=password
 DB_DEV_MODE='1'
-DB_ENTITY_PATH='/app/app/Core/ORM/Entities/'
+DB_ENTITY_PATH=/app/app/Core/ORM/Entities/
 LOG_PATH=./logs/
 REDIS_HOST=redis
 REDIS_PORT=6379
