--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,6 +40,14 @@ jobs:
         uses: jakejarvis/wait-action@master
         with:
           time: '30s'
+      - name: Build test suite
+        run:|
+          docker-compose -f docker-compose.github.actions.yml -p repeat-bot-tests exec -T repeat vendor/bin/codecept build
       - name: Run test suite
-        run: docker-compose -f docker-compose.github.actions.yml -p repeat-bot-tests exec -T worker vendor/bin/phpunit tests
-
+        run:|
+          docker-compose -f docker-compose.github.actions.yml -p repeat-bot-tests exec repeat vendor/bin/doctrine orm:clear-cache:metadata 2> /dev/null | true
+          docker-compose -f docker-compose.github.actions.yml -p repeat-bot-tests exec repeat vendor/bin/doctrine orm:clear-cache:query 2> /dev/null | true
+          docker-compose -f docker-compose.github.actions.yml -p repeat-bot-tests exec repeat vendor/bin/doctrine orm:clear-cache:result 2> /dev/null | true
+          docker-compose -f docker-compose.github.actions.yml -p repeat-bot-tests exec repeat vendor/bin/doctrine orm:generate-proxies 2> /dev/null | true
+          docker-compose -f docker-compose.github.actions.yml -p repeat-bot-tests exec repeat vendor/bin/codecept build 2> /dev/null | true
+          docker-compose -f docker-compose.github.actions.yml -p repeat-bot-tests exec repeat vendor/bin/codecept run
