build github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,15 +41,15 @@ jobs:
         with:
           time: '30s'
       - name: Build test suite
-        run:|
+        run: |
           docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/codecept build
       - name: Run test suite
-        run:|
-          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/doctrine orm:clear-cache:metadata 2> /dev/null | true
-          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/doctrine orm:clear-cache:query 2> /dev/null | true
-          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/doctrine orm:clear-cache:result 2> /dev/null | true
-          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/doctrine orm:generate-proxies 2> /dev/null | true
-          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/codecept build 2> /dev/null | true
+        run: |
+          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/doctrine orm:clear-cache:metadata
+          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/doctrine orm:clear-cache:query
+          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/doctrine orm:clear-cache:result
+          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/doctrine orm:generate-proxies
+          docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/codecept build
           docker-compose -f docker-compose.github.actions.yml exec -T repeat vendor/bin/codecept run --coverage-xml --xml
 
         #SONAR
