--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.projectKey=omentes_repeat-word-bot
 sonar.projectName=Repeat Word Bot
 sonar.organization=omentes
-sonar.sources=./src/
+sonar.sources=./app/
 sonar.exclusions=vendor/**
 sonar.tests=tests
 sonar.host.url=https://sonarcloud.io
