--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectName=Repeat Word Bot
 sonar.organization=omentes
 sonar.sources=./app/
 sonar.exclusions=vendor/**
-sonar.tests=tests
+sonar.tests=./tests
 sonar.host.url=https://sonarcloud.io
 sonar.php.tests.reportPath=tests/_output/report.xml
 sonar.php.coverage.reportPaths=tests/_output/coverage.xml
