--- a/.env.github.actions
+++ b/.env.github.actions
@@ -2,17 +2,16 @@ SERVICE_ROLE=test
 TG_API=XXXXX
 TG_ADMIN_ID=123
 TG_NAME=Bot
-DB_HOST=mysql
+DB_HOST=mysqlt
 DB_NAME=test_db
-DB_PORT=3306
+DB_PORT=13306
 DB_CHARSET=utf8
 DB_USERNAME=root
 DB_PASSWORD=password
 DB_DEV_MODE='1'
-DB_ENTITY_PATH='/app/app/Core/ORM/Entities/'
+DB_ENTITY_PATH=/app/app/Core/ORM/Entities
 LOG_PATH=./logs/
-REDIS_HOST=redis
+REDIS_HOST=redist
 REDIS_PORT=6379
 REDIS_DB=0
-
 GOOGLE_APPLICATION_CREDENTIALS='/app/google.json'
