--- a/docker-compose.github.actions.yml
+++ b/docker-compose.github.actions.yml
@@ -2,22 +2,28 @@ version: '3'
 
 services:
 
-  worker:
+  repeatt:
     build:
       context: .
-      dockerfile: docker/worker/Dockerfile
-    container_name: 'repeat-bot-tests-worker'
+      dockerfile: docker/php/Dockerfile
+      args:
+        - ENVIRONMENT=tests
+    env_file: .env.github.actions
+    container_name: 'repeat-bot-tests-repeatt'
+    links:
+      - mysqlt
+      - redist
     volumes:
       - .:/app/
     networks:
       - repeat-bot-tests-network
 
-  mysql:
+  mysqlt:
     image: mysql:5.7.22
-    container_name: 'repeat-bot-tests-mysql'
+    container_name: 'repeat-bot-tests-mysqlt'
     restart: always
     ports:
-      - "3306:3306"
+      - "13306:3306"
     environment:
       MYSQL_DATABASE: asterios
       MYSQL_ROOT_PASSWORD: password
@@ -26,11 +32,11 @@ services:
     networks:
       - repeat-bot-tests-network
 
-  redis:
-    container_name: 'repeat-bot-tests-redis'
+  redist:
+    container_name: 'repeat-bot-tests-redist'
     image: redis:3.2
     ports:
-      - "127.0.0.1:6379:6379/tcp"
+      - "127.0.0.1:16379:6379/tcp"
     networks:
       - repeat-bot-tests-network
 
