--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,10 @@
 sonar.projectKey=omentes_repeat-word-bot
 sonar.projectName=Repeat Word Bot
 sonar.organization=omentes
-sonar.sources=./app/
-sonar.exclusions=vendor/**
-sonar.tests=./tests
+sonar.sources=/app/app/
+sonar.exclusions=/app/vendor/**
+sonar.tests=/app/tests
 sonar.host.url=https://sonarcloud.io
-sonar.php.tests.reportPath=tests/_output/report.xml
-sonar.php.coverage.reportPaths=tests/_output/coverage.xml
+sonar.php.tests.reportPath=/app/tests/_output/report.xml
+sonar.php.coverage.reportPaths=/app/tests/_output/coverage.xml
+sonar.projectBaseDir=/app
