add collections tests

--- a/.env.dist
+++ b/.env.dist
@@ -16,3 +16,4 @@ REDIS_PORT=6379
 REDIS_DB=0
 MP3_PATH='../words'
 GOOGLE_APPLICATION_CREDENTIALS='/app/google.json'
+HOOK_HOST=https://repeat.webhook.pp.ua
