--- a/.env.github.actions
+++ b/.env.github.actions
@@ -15,3 +15,4 @@ REDIS_HOST=redist
 REDIS_PORT=6379
 REDIS_DB=0
 GOOGLE_APPLICATION_CREDENTIALS='/app/google.json'
+HOOK_HOST=https://repeat.webhook.pp.ua
