tests for del reset settings tim training services

--- a/codeception.yml
+++ b/codeception.yml
@@ -6,6 +6,7 @@ suites:
       enabled:
         - Asserts
         - \Helper\Unit
+        - \Helper\HaveEntity
         - Doctrine2:
             connection_callback: [ Helper\ORM, getEntityManager ]
       step_decorators: ~
