--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,6 @@ jobs:
         run: composer install --dev --no-interaction --no-ansi --prefer-dist --no-suggest --ignore-platform-reqs
       - name: PSR12 check
         run: php vendor/bin/phpcbf --standard=psr12 app -n tests -n
-      - name: Psalm check
-        run: php vendor/bin/psalm
       - name: Create env file
         run: |
           cp .env.github.actions .env
@@ -39,6 +37,8 @@ jobs:
         uses: jakejarvis/wait-action@master
         with:
           time: '15s'
+      - name: Psalm check
+        run: docker-compose -f docker-compose.github.actions.yml exec -T repeatt php vendor/bin/psalm
       - name: Build test suite
         run: |
           docker-compose -f docker-compose.github.actions.yml exec -T repeatt vendor/bin/codecept build
