--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "promphp/prometheus_client_php": "^2.2",
         "mpdf/mpdf": "8.0.10",
         "google/cloud-text-to-speech": "^1.2",
-        "doctrine/orm": "^2.8"
+        "doctrine/orm": "^2.8",
+        "omentes/telegram-bot-command-wrapper": "0.0.4"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
