--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=omentes_repeat-word-bot
+sonar.projectKey=setnemo_repeat-word-bot
 sonar.projectName=Repeat Word Bot
-sonar.organization=omentes
+sonar.organization=setnemo
 sonar.sources=./app/
 sonar.exclusions=./vendor/**
 sonar.tests=./tests
