--- a/docker/supervisor/cleaner.conf
+++ b/docker/supervisor/cleaner.conf
@@ -1,6 +1,6 @@
-[program:clean]
+[program:cleaner]
 command = php /app/cleaner.php
-stderr_logfile=/var/log/supervisor-queue-bot.log
+stderr_logfile=/var/log/supervisor-cleaner-bot.log
 numprocs = 1
 user = root
 startsecs = 3
